compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__panic_with_echo_and_message.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 522
expression: panic as echo wibble as message
snapshot_kind: text
---
[
    Expression(
        Panic {
            location: SrcSpan {
                start: 0,
                end: 31,
            },
            message: Some(
                Echo {
                    location: SrcSpan {
                        start: 9,
                        end: 31,
                    },
                    keyword_end: 13,
                    expression: Some(
                        Var {
                            location: SrcSpan {
                                start: 14,
                                end: 20,
                            },
                            name: "wibble",
                        },
                    ),
                    message: Some(
                        Var {
                            location: SrcSpan {
                                start: 24,
                                end: 31,
                            },
                            name: "message",
                        },
                    ),
                },
            ),
        },
    ),
]
