compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__repeated_echos.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 577
expression: echo echo echo 1
snapshot_kind: text
---
[
    Expression(
        Echo {
            location: SrcSpan {
                start: 0,
                end: 16,
            },
            keyword_end: 4,
            expression: Some(
                Echo {
                    location: SrcSpan {
                        start: 5,
                        end: 16,
                    },
                    keyword_end: 9,
                    expression: Some(
                        Echo {
                            location: SrcSpan {
                                start: 10,
                                end: 16,
                            },
                            keyword_end: 14,
                            expression: Some(
                                Int {
                                    location: SrcSpan {
                                        start: 15,
                                        end: 16,
                                    },
                                    value: "1",
                                    int_value: 1,
                                },
                            ),
                            message: None,
                        },
                    ),
                    message: None,
                },
            ),
            message: None,
        },
    ),
]
