compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__special_error_for_pythonic_import.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1901
expression: import gleam.io
snapshot_kind: text
---
----- SOURCE CODE
import gleam.io

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:13
  │
1 │ import gleam.io
  │             ^ I was expecting either `/` or `.{` here.

Perhaps you meant one of:

    import gleam/io
    import gleam.{item}
