compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__with_let_binding3.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 428
expression: "let assert [x] = [2]"
snapshot_kind: text
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 20,
            },
            value: List {
                location: SrcSpan {
                    start: 17,
                    end: 20,
                },
                elements: [
                    Int {
                        location: SrcSpan {
                            start: 18,
                            end: 19,
                        },
                        value: "2",
                        int_value: 2,
                    },
                ],
                tail: None,
            },
            pattern: List {
                location: SrcSpan {
                    start: 11,
                    end: 14,
                },
                elements: [
                    Variable {
                        location: SrcSpan {
                            start: 12,
                            end: 13,
                        },
                        name: "x",
                        type_: (),
                        origin: VariableOrigin {
                            syntax: Variable(
                                "x",
                            ),
                            declaration: LetPattern,
                        },
                    },
                ],
                tail: None,
                type_: (),
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: None,
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: None,
        },
    ),
]
