compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__with_let_binding3_and_annotation.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 433
expression: "let assert [x]: List(Int) = [2]"
snapshot_kind: text
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 31,
            },
            value: List {
                location: SrcSpan {
                    start: 28,
                    end: 31,
                },
                elements: [
                    Int {
                        location: SrcSpan {
                            start: 29,
                            end: 30,
                        },
                        value: "2",
                        int_value: 2,
                    },
                ],
                tail: None,
            },
            pattern: List {
                location: SrcSpan {
                    start: 11,
                    end: 14,
                },
                elements: [
                    Variable {
                        location: SrcSpan {
                            start: 12,
                            end: 13,
                        },
                        name: "x",
                        type_: (),
                        origin: VariableOrigin {
                            syntax: Variable(
                                "x",
                            ),
                            declaration: LetPattern,
                        },
                    },
                ],
                tail: None,
                type_: (),
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: None,
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
            },
            annotation: Some(
                Constructor(
                    TypeAstConstructor {
                        location: SrcSpan {
                            start: 16,
                            end: 25,
                        },
                        name_location: SrcSpan {
                            start: 16,
                            end: 20,
                        },
                        module: None,
                        name: "List",
                        arguments: [
                            Constructor(
                                TypeAstConstructor {
                                    location: SrcSpan {
                                        start: 21,
                                        end: 24,
                                    },
                                    name_location: SrcSpan {
                                        start: 21,
                                        end: 24,
                                    },
                                    module: None,
                                    name: "Int",
                                    arguments: [],
                                    start_parentheses: None,
                                },
                            ),
                        ],
                        start_parentheses: Some(
                            20,
                        ),
                    },
                ),
            ),
        },
    ),
]
